# Masked

./: .gitignore  README.md
Masked/: CMakeLists.txt  ComparisonAlgorithm.h  ComparisonAlgorithmHelper.cpp  ComparisonAlgorithmHelper.h  MaskedLBPModel.cpp  MaskedLBPModel.h  MaskedType.h  MaskedTypeHelper.cpp  MaskedTypeHelper.h  PredictionResult.cpp  PredictionResult.h  Predictor.cpp  Predictor.h  Trainer.cpp  Trainer.h  main.cpp
MaskedConverter/: CMakeLists.txt  main.cpp
MaskedLBP/: 1TEST.txt  CMakeLists.txt  main.cpp  main.h
